--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,20 @@ body{
     display: flex;
     align-items: center;
     text-decoration: none;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+}
+.sidebar-container ul li a:hover{
+    color:#8A34F8;
+    background:#fff;
 }
 .sidebar-container ul li a i{
     height: 50px;
