--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ body{
     width: 100%;
     overflow: hidden;
 }
-.sidebar-container{
+.sidebar{
     position: fixed;
     top: 0;
     left: 0;
@@ -21,7 +21,7 @@ body{
     background: #8A34F8;
     padding: 6px 14px;
 }
-.sidebar-container .logo-content .logo{
+.sidebar .logo-content .logo{
     color: #fff;
     display: flex;
     height: 50px;
@@ -36,7 +36,7 @@ body{
     font-size: 20px;
     font-weight: 400;
 }
-.sidebar-container #btn{
+.sidebar #btn{
     position: absolute;
     color: #fff;
     left: 90%;
@@ -52,10 +52,10 @@ body{
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
 }
-.sidebar-container ul{
+.sidebar ul{
     margin-top: 20px;
 }
-.sidebar-container ul li{
+.sidebar ul li{
     position: relative;
     height: 50px;
     width: 100%;
@@ -63,7 +63,28 @@ body{
     list-style: none;
     line-height: 50px;
 }
-.sidebar-container ul li a{
+.sidebar ul li .tooltip{
+    position: absolute;
+    left: 122px;
+    top: 0;
+    transform: translateY(-50%);
+    border-radius:6px;
+    height: 35px;
+    width: 122px;
+    background: #fff;
+    line-height: 35px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: 0s;
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar ul li:hover .tooltip{
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
+.sidebar ul li a{
     color: #fff;
     display: flex;
     align-items: center;
@@ -79,11 +100,11 @@ body{
     -ms-border-radius: 12px;
     -o-border-radius: 12px;
 }
-.sidebar-container ul li a:hover{
+.sidebar ul li a:hover{
     color:#8A34F8;
     background:#fff;
 }
-.sidebar-container ul li a i{
+.sidebar ul li a i{
     height: 50px;
     min-width: 50px;
     border-radius: 12px;
