--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,18 @@ body{
     top: 0;
     left: 0;
     height:100%;
-    width: 340px;
+    width: 80px;
     background: #8A34F8;
     padding: 6px 14px;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
+.sidebar.active{
+    width: 240px;
+
 }
 .sidebar .logo-content .logo{
     color: #fff;
@@ -27,6 +36,11 @@ body{
     height: 50px;
     width: 100%;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar.active .logo-content .logo{
+    opacity: 1;
 }
 .logo-content .logo i{
     font-size: 28px;
@@ -39,7 +53,7 @@ body{
 .sidebar #btn{
     position: absolute;
     color: #fff;
-    left: 90%;
+    left: 50%;
     top: 6px;
     font-size: 20px;
     height: 50px;
@@ -51,6 +65,9 @@ body{
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
+}
+.sidebar.active #btn{
+    left: 90%;
 }
 .sidebar ul{
     margin-top: 20px;
@@ -67,7 +84,7 @@ body{
     position: absolute;
     left: 122px;
     top: 0;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
     border-radius:6px;
     height: 35px;
     width: 122px;
@@ -78,6 +95,14 @@ body{
     transition: 0s;
     opacity: 0;
     pointer-events: none;
+    display: block;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+.sidebar.active ul li .tooltip{
+    display: none;
 }
 .sidebar ul li:hover .tooltip{
     transition: all 0.5s ease;
@@ -99,10 +124,30 @@ body{
     -moz-border-radius: 12px;
     -ms-border-radius: 12px;
     -o-border-radius: 12px;
+    white-space: nowrap;
 }
 .sidebar ul li a:hover{
     color:#8A34F8;
     background:#fff;
+}
+.sidebar ul li i{
+    height: 50px;
+    min-width: 50px;
+    border-radius:12px;
+    -webkit-border-radius:12px;
+    -moz-border-radius:12px;
+    -ms-border-radius:12px;
+    -o-border-radius:12px;
+    line-height: 50px;
+    text-align: center;
+}
+.sidebar .links_name{
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar.active .links_name{
+    opacity: 1;
+    pointer-events: auto;
 }
 .sidebar ul li a i{
     height: 50px;
@@ -114,4 +159,21 @@ body{
     -o-border-radius: 12px;
     line-height: 50px;
     text-align: center;
+}
+.Home_content{
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 80px);
+    left: 80px;
+    transition: all 0.5s ease;
+}
+.Home_content .text{
+    font-size: 25px;
+    font-weight: 500;
+    color: #1d1b31;
+    margin:12px;
+}
+.sidebar.active ~ .Home_content{
+    width: calc(100% - 80px);
+    left: 240px;
 }
