--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,10 @@ body{
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
+    background-color: #fff;
 }
+
+/*Sidebar*/
 .sidebar{
     position: fixed;
     top: 0;
@@ -160,6 +163,7 @@ body{
     line-height: 50px;
     text-align: center;
 }
+/*Content page*/
 .Home_content{
     position: absolute;
     height: 100%;
@@ -167,11 +171,16 @@ body{
     left: 80px;
     transition: all 0.5s ease;
 }
-.Home_content .text{
+.Home_content .LandingPage .text{
     font-size: 25px;
     font-weight: 500;
     color: #1d1b31;
     margin:12px;
+}
+.Home_content .LandingPage .Profile1{
+    position: absolute;
+    size: 80%;
+    left: 50px;
 }
 .sidebar.active ~ .Home_content{
     width: calc(100% - 80px);
